# union-find-viz

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  decoder_stepper.cpp  decoder_stepper.h  dem_parser.cpp  dem_parser.h  main.cpp  renderer.cpp  renderer.h  surface_code.cpp  surface_code.h  test.dem  test_events.txt  ui.cpp  ui.h
cpp/: CMakeLists.txt
cpp/src/: decoder_stepper.cpp  decoder_stepper.h  dem_parser.cpp  dem_parser.h  renderer.cpp  renderer.h  ui.cpp  ui.h  union_find.cpp  union_find.h  union_find_old.cpp  union_find_old.h  wasm_bindings.cpp
data/: test.dem  test_events.txt
py/: generate_presets.py  main.py  pyproject.toml  server.py
web/: build.sh  decoder.js  decoder.wasm  index.html  style.css
web/data/: d25_r10.dem  d25_r10_events.txt  d3_r3.dem  d3_r3_events.txt  d5_r5.dem  d5_r5_events.txt  d7_r7.dem  d7_r7_events.txt  d9_r9.dem  d9_r9_events.txt
web/js/: colors.js  interaction.js  main.js  renderer.js  scene.js  ui-controller.js
